# SANDMAN

./: .env  .gitignore  README.md  pyproject.toml  setup.sh
Notebooks/: training_example.ipynb
SANDMAN/: pyproject.toml
SANDMAN/src/sandman/: __init__.py  paths.py
SANDMAN/src/sandman/data_loading/: blinking.py  chaotic_rnn_loader.py  data_loader_ibl.py  data_loader_map.py  ibl_data_utils.py  loader_utils.py  map_data_utils.py
SANDMAN/src/sandman/models/: diffusion.py  sampling.py  training.py  utils.py
Writeup/: sandman.tex
data/: README.md
data/tables_and_infos/: brain_regions_info.csv  ibl_eids.txt  ibl_region_neuron_count.npy  ibl_region_to_ind.npy  pr_max_dict.pkl  pr_max_dict_ibl.pkl  pr_max_dict_updated.pkl  region_info_summary.pkl  session_info.csv  session_order.pkl
