[project]
name = "sandman"
version = "0.1.0"
description = "Spiking Activity in Neurons with Diffusion Modeling Across Neural Regions"
requires-python = ">=3.9"

# Environment inspired by LDNS: https://github.com/mackelab/LDNS
dependencies = [
    # Core dependencies
    "numpy<=1.26",
    "torch",
    "torchvision",
    "tqdm",

    # Data handling and processing
    "pandas>=1.3.0",
    "scikit-learn",
    "scipy>=1.7.0",

    # Diffusion models
    "diffusers==0.3.0",

    # Neural data tools
    # "nlb_tools>=0.0.1",
    "dysts<=0.6",
    "dandi>=0.60.0",
    "one-api>=0.4.5",
    "pynwb>=2.0.0",
    "ibllib>=3.4.0",
    "ibl-neuropixel",
    "iblatlas",
    "iblutil",
    "spikeinterface",

    # Text processing
    "phonemizer>=3.0.0",

    # Utilities
    "omegaconf>=2.1.0",
    "opt_einsum>=3.3.0",
    "einops>=0.4.0",
    "lovely-tensors>=0.1.0",
    "torchinfo==1.8.0",

    # Logging
    "wandb",

    # Training
    "accelerate==1.1.1",

    # Development tools
    "jupyter>=1.0.0",
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "ipykernel>=6.0.0",
]

